# notes

./: .clang-format  .clang-tidy  .cmake-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Project.pro  README.md  UPDATES.json  UPDATES_FOSS.json  appveyor.yml  init.bat  init.sh  notes.json  notes_purchase_data.json
.github/: FUNDING.yml
.github/workflows/: ci.yml  clang-tidy.yml  format-lint.yml  linux.yml  macos.yml  ubuntu.yml  windows.yml
Dockerfiles/: README.md  appimage-qt5  appimage-qt6  appimage_entrypoint.sh  fedora  fedora-38  fedora-41  opensuse  opensuse-15_5  opensuse-15_6  rpm_entrypoint.sh  ubuntu-20_04  ubuntu-22_04  ubuntu-23_10  ubuntu-24_04  ubuntu-24_10  ubuntu-aqtinstall-5  ubuntu-aqtinstall-6  ubuntu_deb_entrypoint.sh
docs/: build_on_linux.md  build_on_macos.md  build_on_windows.md  build_options.md  keyboard_shortcuts.md
packaging/linux/: make_deb.sh  make_snap.sh  package.sh
packaging/linux/common/: notes.appdata.xml.in  notes.desktop  notes.desktop.in
packaging/linux/deb/notes-0.8.0/: Notes.desktop  Notes.pro
packaging/linux/deb/notes-0.8.0/debian/: changelog  control  copyright  notes.install
packaging/linux/deb/notes-0.9.0/: Notes.desktop
packaging/linux/debian/: changelog  changelog.in  control  copyright  copyright.in  dirs  notes.install  rules
packaging/linux/snap/: README.md  snapcraft.yaml
packaging/linux/snap/parts/plugins/: x-qmake.py
packaging/linux/snap/setup/gui/: Notes.desktop  notes.desktop
packaging/windows/: Notes_Inno_Script.iss  Notes_Inno_Script_Github.iss  Notes_Inno_Script_Github_Qt6.iss
snap/: snapcraft.yaml
snap/gui/: notes.desktop
src/: Notes.pro  aboutwindow.cpp  aboutwindow.h  aboutwindow.ui  allnotebuttontreedelegateeditor.cpp  allnotebuttontreedelegateeditor.h  customDocument.cpp  customDocument.h  customMarkdownHighlighter.cpp  customMarkdownHighlighter.h  customapplicationstyle.cpp  customapplicationstyle.h  customdocument.cpp  dbmanager.cpp  dbmanager.h  defaultnotefolderdelegateeditor.cpp  defaultnotefolderdelegateeditor.h  editorsettingsbutton.cpp  editorsettingsbutton.h  editorsettingsoptions.cpp  editorsettingsoptions.h  elidedlabel.cpp  elidedlabel.h  foldertreedelegateeditor.cpp  foldertreedelegateeditor.h  fontloader.cpp  fontloader.h  fonts.qrc  framelesswindow.cpp  framelesswindow.h  framelesswindow.mm  images.qrc  labeledittype.cpp  labeledittype.h  listviewlogic.cpp  listviewlogic.h  lqtutils_enum.h  main.cpp  mainwindow.cpp  mainwindow.h  (+78 more)
src/images/: notes.rc  notes_icon.icns
src/qml/: CheckBoxMaterial.qml  CustomHorizontalScrollBar.qml  CustomTextArea.qml  CustomTextField.qml  CustomVerticalScrollBar.qml  DotsButton.qml  EditorSettings.qml  EditorSettingsQt512.qml  FontChooserButton.qml  FontIconLoader.qml  FontIconsCodes.qml  IconButton.qml  OptionItemButton.qml  PlusButton.qml  ProPaymentWindow.qml  SubscriptionWindow.qml  SwitchButton.qml  TextButton.qml  ThemeChooserButton.qml  TodoColumnDelegate.qml  TodoTaskDelegate.qml  TrashButton.qml  Utilities.js  ViewChooserButton.qml  kanbanMain.qml
src/styles/: about-window.css  main-window.css  nodetreeview.css  notelistview.css  style-editor-window.css  style.css  taglistview.css
src/styles/components/: custom-scrollbar.css
tests/: main.cpp  tests.pro  tst_mainwindow.cpp  tst_mainwindow.h  tst_notedata.cpp  tst_notedata.h  tst_notemodel.cpp  tst_notemodel.h  tst_noteview.cpp  tst_noteview.h
